# fast-artistic-videos

./: .gitignore  README.md  conftest.py  pyproject.toml
.github/workflows/: fav-ci.yml
configs/: stylize.yaml  stylize_vr.yaml  train_mixed.yaml  train_simple.yaml
docs/: fav.md  phase3-roadmap.md
fav/: __init__.py  bench.py  cli.py  config.py  device.py  preprocess.py
fav/conversion/: __init__.py  vgg16_from_t7.py
fav/data/: __init__.py  image_folder.py  io_utils.py  mixed.py  synthetic.py  video_clips.py  video_real.py
fav/diffusion/: __init__.py  conditioning.py  pipeline.py
fav/flow/: __init__.py  estimator.py  ptlflow_backend.py  raft.py
fav/infer/: __init__.py  core.py  stylize_planar.py
fav/losses/: __init__.py  aux.py  content_style.py  gram.py  perceptual.py  temporal.py  vgg_loss_net.py
fav/models/: __init__.py  generator.py  instance_norm.py  layers.py
fav/occlusion/: __init__.py  consistency.py  filters.py
fav/train/: __init__.py  checkpoint.py  loop.py  schedules.py
fav/vr/: __init__.py  cubemap.py  perspective.py  seams.py  stylize_vr.py
fav/warp/: __init__.py  flow_io.py  grid_sample.py
tests/: test_aux_loss.py  test_cli.py  test_conditioning.py  test_consistency.py  test_data.py  test_diffusion_pipeline.py  test_flow.py  test_flow_backends.py  test_flow_io.py  test_generator.py  test_losses.py  test_modern_generator.py  test_occlusion_golden.py  test_preprocess.py  test_stylize.py  test_throughput.py  test_train_smoke.py  test_video_clips.py  test_vr.py  test_vr_seams.py  test_warp.py
